# tg-agent-relay

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md  REUSE-DEBT.md  REUSE.toml  ROADMAP.md  SETUP.md  fetch-voices.sh  go-live.sh  hook-notify-grok.sh  hook-notify.sh  install-grok-hooks.sh  install-hooks.sh  pyproject.toml  relay-notify.sh  relay.toml.example  rust-toolchain.toml  tg-poll.sh  tg-send.sh  watch-go-live.sh
.github/ISSUE_TEMPLATE/: swarm_task.yml
.github/workflows/: ci.yml  close-issues-on-merge.yml  fleet-ci.yml  fleet-security.yml  gitleaks.yml  release.yml  reopen-issues-closed-off-main.yml
adapters/: README.md  backend-fifo-reader.sh  claude-code.sh  generic-example.sh  grok.sh
crates/gha_runner_ctl/: Cargo.toml
crates/gha_runner_ctl/src/: main.rs
docs/: ADK_MCP.md  AGENT_INTERFACES.md  COMMANDS.md  DECISIONS.md  EPICS.md  GROK_HOOKS.md  PORTING_TO_MYCELIUM.md  PROVIDERS.md  RELEASING.md  ROUTING.md  SELF_HOSTED_RUNNER.md  SESSIONS.md  TELEGRAM_MCP.md  TGAR_RS.md  THREADS.md  TOOLING.md  USAGE.md  WORKFLOW.md
docs/assets/: README.md  code-highlight-example.html  code-highlight-example.txt  dashboard-example.txt  usage-example.txt  visual-context-experiment.md
docs/context/: README.md  architecture.txt  manifest.json  routing.txt  usage-legend.txt
handlers/: README.md  config.sh  dashboard.sh  example-echo.sh  ext.sh  help.sh  project.sh  stats.sh  thread.sh  uptime.sh  usage.sh
lib/: agent_handle.sh  agent_stamp.sh  claude-code-events.sh  code_highlight.py  code_highlight.sh  comms_format.sh  context_render.py  context_select.py  dashboard_render.py  exec-env.sh  fifo_agent_readers.py  format.sh  grok-events.sh  metrics_agg.py  provider_catalog.py  provider_hook.py  python.sh  python_fallback.sh  relay-common.sh  relay-config.sh  remote_config.py  routing.py  routing.sh  sessions.py  toml_to_json.py  tts.sh  tts_plain_text.py  usage_ingest.py
providers/: __init__.py  base.py
providers/adk/: __init__.py
providers/aider/: __init__.py
providers/claude/: __init__.py  hooks.py  usage.py
providers/gemini/: __init__.py
providers/generic/: __init__.py
providers/grok/: __init__.py  hooks.py  usage.py
providers/ollama/: __init__.py  usage.py
providers/openai/: __init__.py  usage.py
scripts/: close-linked-issues.sh  deploy-local.sh  dev.sh  doctor-inbound.sh  ensure-inbound.sh  inbound-health.sh  list-sessions.sh  local-ci.sh  merge-pr.sh  new-provider.sh  register-session.sh  release.sh  unregister-session.sh
scripts/self-hosted-runner/: Containerfile  README.md  entrypoint.sh  install-ctl.sh  run-runner.sh
tests/: conftest.py  run-tests.sh  test_agent_handle.py  test_agent_stamp.py  test_code_highlight.py  test_comms_format.py  test_context_select.py  test_extensions_adk.py  test_fifo_agent_readers.py  test_format_api.py  test_goal_events.py  test_grok_adapter_e2e.py  test_highlight_docs.py  test_hook_fixtures.py  test_install_grok_hooks.sh  test_mcp_stub.py  test_media_inbound.py  test_metrics_agg.py  test_package_interfaces.py  test_plan_approve.py  test_poll.py  test_project_bind.py  test_providers_claude.py  test_providers_grok.py  test_providers_plugplay.py  test_remote_config.py  test_routing_tables.py  test_script_suites_pytest.py  test_send.py  test_sessions_routing.py  test_threads.py  test_tts_package.py  test_tts_plain_text.py  test_usage_allotments.py  test_usage_ingest.py  test_usage_registry.py
tests/fixtures/: relay.toml  settings-with-other-hooks.json
tests/fixtures/hooks/: README.md
tests/fixtures/hooks/claude/: Notification.json  PostToolUseFailure.json  PreToolUse.json  SessionStart.json  Stop.json  SubagentStop.json
tests/fixtures/hooks/grok/: Notification.json  PermissionDenied.json  PostCompact.json  PostToolUse.json  PostToolUseFailure.json  PreCompact.json  PreToolUse.json  SessionEnd.json  SessionStart.json  Stop.json  StopFailure.json  SubagentStart.json  SubagentStop.json  UserPromptSubmit.json
tests/fixtures/usage-synthetic/-fake-project-alpha/: session1.jsonl
tests/fixtures/usage-synthetic/-fake-project-alpha/sess-nested/subagents/: agent1.jsonl
tests/fixtures/usage-synthetic/-fake-project-beta/: session2.jsonl
tg_agent_relay/: __init__.py  adk_bridge.py  agent_handle.py  agent_stamp.py  cli.py  comms_format.py  config.py  extensions.py  format_api.py  goal_events.py  highlight_docs.py  hooks.py  mcp_stub.py  media_inbound.py  metrics.py  plan_approve.py  poll.py  protocols.py  routing.py  send.py  threads.py  tts.py
