[package]
name = "gha_runner_ctl"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "One GitHub Actions self-hosted runner: listen, register, spin up/down (Podman snapshot)"
publish = false

[[bin]]
name = "gha-runner-ctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Blocking HTTP keeps the binary tiny and the control loop simple.
ureq = { version = "2.12", default-features = true, features = ["json"] }

[lints]
workspace = true
